### 09-Dec-2013 - MLS -- Version 3.2
    A new calibration step was added to the UVIS process, FLUXCORR, can now be run at the end of regular
    processing. It will scale the chip2 image using the new PHTFLAM1 and PHTFLAM2 values in the IMPHTAB.
    New flatfields for all filters, as well as a new IMPHTTAB will be delivered by the team for this step
    to be completely implemented. This is a significant version increase since I had to modify the globablly
    access GetPhotTab to read the new WFC3 imphttab correctly, as well as touch many routines in the calwf3 process.
    (#1011 is the main ticket)


### 15-Niv-2013 - MLS -- Version 3.1.6
    Fixed a file i/o issue after change in cfitsio interaction (see #970, #1073 and #1069)

### 30-Sept-2013 - MLS -- Version 3.1.5
    - fixed the individual task executables for wf3ir, wf3ccd, wf32d to properly used the user specfied output filename
      when they are called standalone
      (#1049)
      
### 09-Sept-2013 - MLS -- Version 3.1.4
    Updated the postflash routine and sub1d and multk1d to perform the correct subarray
    calibration for all cases. (#983) The previous update was not sufficient for team subarrays.

### 26-Mar-2013 - MLS -- Version 3.1.3
    Updated the postflash routine to apply the correct offset for all amps
    when a user specified subarray is used (no GO users are allowed to do this)
  
    Some unrelated files will change because I formatted the indentation to make
    the code easier to decipher


### 11-Feb-2013 - MLS -- Version 3.1.2
    Updated the bias subtraction to check for CCDAMP values of SINGLE_AMP and
    SINGLE_OR_ALL in the reference bias file image when a full frame reference file 
    and a  user specified subarray are used so that the correct overscan region is ignored

    Removed check for TDFTRANS per team request, see #980, I'm keeping the same version as
    the previous change because I havent delivered it yet
    