@@ -1,4 +1,4 @@
 /* This string is written to the output primary header as CAL_VER. */
 
-# define WF3_CAL_VER "3.2(17-Feb-2014)"
-# define WF3_CAL_VER_NUM "3.2"
+# define WF3_CAL_VER "3.2.1(08-Dec-2014)"
+# define WF3_CAL_VER_NUM "3.2.1"
